--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
         </div>
-        <ul id="listingsContainer"></ul>
+        <ul class="ulcont" id="listingsContainer"></ul>
     </div>
     <script src="script.js"></script>
 </body>
