--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
       const galleryButton = document.querySelector('.gallery button');
       galleryButton.addEventListener('click', function () {
         if (!galleryContentDisplayed) {
-          const images = ['z.png', 'z.png', 'z.png'];
+          const images = ['x.png', 'y.png', 'z.png'];
           createImageItems(images);
           galleryContentDisplayed = true;
         }
