--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         visibleItems.forEach(item => {
           const index = parseInt(item.getAttribute('data-index'));
           if (index % 2 !== 0) {
-            item.style.backgroundColor = '#fffcf2'; // Set background color for odd-indexed visible items
+            item.style.backgroundColor = '#eae3cb'; // Set background color for odd-indexed visible items
           } else {
             item.style.backgroundColor = '#ffffff'; // Set background color for even-indexed visible items
           }
